--- a/e-commerce-scaled/projects/product-management/package.json
+++ b/e-commerce-scaled/projects/product-management/package.json
@@ -13,12 +13,13 @@
     "build": "nest build"
   },
   "dependencies": {
-    "@nestjs/common": "^10.2.10",
-    "@nestjs/core": "^10.2.10",
-    "@nestjs/jwt": "^10.2.0",
-    "@nestjs/passport": "^10.0.2",
-    "@nestjs/platform-express": "^10.2.10",
-    "@nestjs/serve-static": "^4.0.0",
+    "@nestjs/common": "^11.0.12",
+    "@nestjs/core": "^11.0.12",
+    "@nestjs/cqrs": "^11.0.3",
+    "@nestjs/jwt": "^11.0.0",
+    "@nestjs/passport": "^11.0.5",
+    "@nestjs/platform-express": "^11.0.12",
+    "@nestjs/serve-static": "^5.0.3",
     "@nestjs/swagger": "^7.1.16",
     "@prisma/client": "^5.6.0",
     "bcrypt": "^5.1.1",
@@ -31,7 +32,7 @@
   "devDependencies": {
     "@nestjs/cli": "^10.2.1",
     "@nestjs/schematics": "^10.0.3",
-    "@nestjs/testing": "^10.2.10",
+    "@nestjs/testing": "^11.0.12",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.10",
     "@types/node": "^20.9.4",
