--- a/e-commerce-scaled/projects/user-service/package.json
+++ b/e-commerce-scaled/projects/user-service/package.json
@@ -4,11 +4,11 @@
     "seed": "ts-node ./prisma/seed.ts"
   },
   "scripts": {
-    "dev": "DATABASE_URL=\"postgresql://user:password@localhost:3030/llama_gamer_db\" nest start --watch",
+    "dev": "DATABASE_URL=\"postgresql://user:password@localhost:5437/usersdb\" nest start --watch",
     "lint": "eslint \"{src,test}/**/*.ts\" --report-unused-disable-directives --max-warnings 0",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "test": "jest --coverage --detectOpenHandles --passWithNoTests",
-    "prisma": "DATABASE_URL=\"postgresql://user:password@localhost:3030/llama_gamer_db\" prisma generate && DATABASE_URL=\"postgresql://user:password@localhost:3030/llama_gamer_db\" prisma db push --accept-data-loss && DATABASE_URL=\"postgresql://user:password@localhost:3030/llama_gamer_db\" prisma db seed",
+    "prisma": "DATABASE_URL=\"postgresql://user:password@localhost:5437/usersdb\" prisma generate && DATABASE_URL=\"postgresql://user:password@localhost:5437/usersdb\" prisma db push --accept-data-loss && DATABASE_URL=\"postgresql://user:password@localhost:5437/usersdb\" prisma db seed",
     "prisma:generate": "prisma generate",
     "build": "nest build"
   },
