--- a/e-commerce-scaled/docker-compose.yml
+++ b/e-commerce-scaled/docker-compose.yml
@@ -17,6 +17,16 @@ services:
       - postgres-data:/var/lib/postgresql/data
       - ./scripts/init.pgsql:/docker-entrypoint-initdb.d/1.sql
 
+  api-gateway:
+    container_name: gateway
+    build:
+      context: ./projects/
+      dockerfile: ./gateway/Dockerfile
+    network_mode: "host"
+    environment:
+      - NGINX_PORT=8000
+
+
   pgadmin:
     image: dpage/pgadmin4:7.8
     container_name: llama_gamer_pgadmin
