--- a/e-commerce-scaled/projects/gateway/nginx.conf
+++ b/e-commerce-scaled/projects/gateway/nginx.conf
@@ -30,57 +30,57 @@ http {
 
         location /api/countries/ {
             proxy_set_header Host $http_host;
-            proxy_pass http://product-management/;
+            proxy_pass http://product-management;
         }
 
         location /api/suppliers/ {
             proxy_set_header Host $http_host;
-            proxy_pass http://product-management/;
+            proxy_pass http://product-management;
         }
 
         location /api/brands/ {
             proxy_set_header Host $http_host;
-            proxy_pass http://product-management/;
+            proxy_pass http://product-management;
         }
 
         location /api/categories/ {
             proxy_set_header Host $http_host;
-            proxy_pass http://product-management/;
+            proxy_pass http://product-management;
         }
 
         location /api/product/ {
             proxy_set_header Host $http_host;
-            proxy_pass http://product-management/;
+            proxy_pass http://product-management;
         }
 
         location /api/product-image/ {
             proxy_set_header Host $http_host;
-            proxy_pass http://product-management/;
+            proxy_pass http://product-management;
         }
 
         location /api/products-suppliers/ {
             proxy_set_header Host $http_host;
-            proxy_pass http://product-management/;
+            proxy_pass http://product-management;
         }
 
         location /api/view/ {
             proxy_set_header Host $http_host;
-            proxy_pass http://product-views/;
+            proxy_pass http://product-views;
         }
 
         location /api/purchases/ {
             proxy_set_header Host $http_host;
-            proxy_pass http://order-processing/;
+            proxy_pass http://order-processing;
         }
 
         location /api/auth/ {
             proxy_set_header Host $http_host;
-            proxy_pass http://user-service/;
+            proxy_pass http://user-service;
         }
 
         location /api/users/ {
             proxy_set_header Host $http_host;
-            proxy_pass http://user-service/;
+            proxy_pass http://user-service;
         }
     }
 }
